integration for playlist detail

--- a/Mp3App/Features/Mypage/PlaylistDetail/PlaylistDetailTableViewCell.xib
+++ b/Mp3App/Features/Mypage/PlaylistDetail/PlaylistDetailTableViewCell.xib
@@ -26,20 +26,20 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IYW-nk-QVs">
-                                <rect key="frame" x="88" y="15" width="37.5" height="17"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <rect key="frame" x="88" y="15" width="37" height="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ST-cu-QsY">
-                                <rect key="frame" x="88" y="68.5" width="31" height="14.5"/>
+                                <rect key="frame" x="88" y="71.5" width="31" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Lt-RQ-hsM">
                                 <rect key="frame" x="312" y="20" width="18" height="58"/>
-                                <state key="normal" image="accessory_more_chart_white_normal_Normal"/>
+                                <state key="normal" image="accessory_more_black_normal_Normal"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -55,7 +55,7 @@
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="5ST-cu-QsY" secondAttribute="trailing" constant="30" id="i01-rW-6X6"/>
                             <constraint firstItem="lAy-n9-517" firstAttribute="top" secondItem="1Jh-mi-wiO" secondAttribute="top" constant="10" id="kY8-I9-tnO"/>
                             <constraint firstItem="lAy-n9-517" firstAttribute="leading" secondItem="1Jh-mi-wiO" secondAttribute="leading" id="olu-JX-Oan"/>
-                            <constraint firstAttribute="bottom" secondItem="5ST-cu-QsY" secondAttribute="bottom" constant="15" id="pJ4-HO-29I"/>
+                            <constraint firstAttribute="bottom" secondItem="5ST-cu-QsY" secondAttribute="bottom" constant="12" id="pJ4-HO-29I"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -71,13 +71,13 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="albumImageView" destination="lAy-n9-517" id="X8n-xb-1So"/>
-                <outlet property="singerLabel" destination="5ST-cu-QsY" id="3TA-sg-IMW"/>
+                <outlet property="descriptionLabel" destination="5ST-cu-QsY" id="3TA-sg-IMW"/>
                 <outlet property="titleLabel" destination="IYW-nk-QVs" id="HYu-hx-028"/>
             </connections>
             <point key="canvasLocation" x="175.36231884057972" y="171.42857142857142"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="accessory_more_chart_white_normal_Normal" width="18" height="4"/>
+        <image name="accessory_more_black_normal_Normal" width="18" height="4"/>
     </resources>
 </document>
