edit button play in playlist detail screen

--- a/Mp3App/Features/Mypage/LibraryDetail/LibraryDetailViewController.storyboard
+++ b/Mp3App/Features/Mypage/LibraryDetail/LibraryDetailViewController.storyboard
@@ -30,13 +30,25 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Không có bài hát trong danh sách yêu thích Tìm bài hát để thêm vào danh sách của bạn" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEJ-gp-gc4">
+                                <rect key="frame" x="67" y="56" width="280" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="WZp-IP-Iaa"/>
+                                    <constraint firstAttribute="width" constant="280" id="uQY-a8-0Lg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="cEJ-gp-gc4" firstAttribute="top" secondItem="RoQ-UU-uIy" secondAttribute="top" constant="12" id="J7s-wF-hKe"/>
                             <constraint firstItem="9e8-v1-idD" firstAttribute="leading" secondItem="RoQ-UU-uIy" secondAttribute="leading" constant="20" id="Kv6-Zj-YGo"/>
                             <constraint firstItem="RoQ-UU-uIy" firstAttribute="bottom" secondItem="bbn-1Y-Rxy" secondAttribute="bottom" id="Sgx-KZ-KUo"/>
                             <constraint firstItem="bbn-1Y-Rxy" firstAttribute="leading" secondItem="RoQ-UU-uIy" secondAttribute="leading" id="edc-Rb-myW"/>
                             <constraint firstAttribute="trailing" secondItem="bbn-1Y-Rxy" secondAttribute="trailing" id="fMG-SO-mcD"/>
+                            <constraint firstItem="cEJ-gp-gc4" firstAttribute="centerX" secondItem="RoQ-UU-uIy" secondAttribute="centerX" id="gAc-nw-oYF"/>
                             <constraint firstItem="9e8-v1-idD" firstAttribute="top" secondItem="RoQ-UU-uIy" secondAttribute="top" constant="10" id="jz6-Q7-FWZ"/>
                             <constraint firstItem="RoQ-UU-uIy" firstAttribute="trailing" secondItem="9e8-v1-idD" secondAttribute="trailing" constant="20" id="zQh-ol-ZwJ"/>
                             <constraint firstItem="bbn-1Y-Rxy" firstAttribute="top" secondItem="9e8-v1-idD" secondAttribute="bottom" constant="10" id="zuP-UM-0o4"/>
@@ -44,6 +56,7 @@
                         <viewLayoutGuide key="safeArea" id="RoQ-UU-uIy"/>
                     </view>
                     <connections>
+                        <outlet property="notificationLabel" destination="cEJ-gp-gc4" id="7fs-Xr-bDn"/>
                         <outlet property="playButton" destination="9e8-v1-idD" id="wQr-mk-1rG"/>
                         <outlet property="tableView" destination="bbn-1Y-Rxy" id="1PI-FC-eR7"/>
                     </connections>
