--- a/Mp3App/Features/Mypage/PlaylistDetail/PlaylistDetailViewController.storyboard
+++ b/Mp3App/Features/Mypage/PlaylistDetail/PlaylistDetailViewController.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5on-e2-S8O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5on-e2-S8O">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,9 +30,20 @@
                                 <rect key="frame" x="0.0" y="104" width="414" height="758"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Không có bài hát trong playlist của bạn. Tìm bài hát để thêm vào playlist của bạn" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nf2-OB-OJV">
+                                <rect key="frame" x="77" y="54" width="260" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="260" id="AIh-d6-m8Y"/>
+                                    <constraint firstAttribute="height" constant="40" id="B5O-hC-AtE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="Nf2-OB-OJV" firstAttribute="centerX" secondItem="Zcr-aN-buV" secondAttribute="centerX" id="012-qA-fy5"/>
                             <constraint firstItem="hQQ-tg-tHC" firstAttribute="top" secondItem="RYC-ZV-V4B" secondAttribute="bottom" constant="10" id="GeI-8S-Xor"/>
                             <constraint firstItem="Zcr-aN-buV" firstAttribute="trailing" secondItem="RYC-ZV-V4B" secondAttribute="trailing" constant="50" id="PtI-fP-J7H"/>
                             <constraint firstItem="Zcr-aN-buV" firstAttribute="trailing" secondItem="hQQ-tg-tHC" secondAttribute="trailing" id="Qa9-lB-tyh"/>
@@ -40,6 +51,7 @@
                             <constraint firstItem="hQQ-tg-tHC" firstAttribute="leading" secondItem="Zcr-aN-buV" secondAttribute="leading" id="Sov-Y1-YMQ"/>
                             <constraint firstItem="RYC-ZV-V4B" firstAttribute="top" secondItem="Zcr-aN-buV" secondAttribute="top" constant="10" id="fm1-FZ-U5Q"/>
                             <constraint firstItem="Zcr-aN-buV" firstAttribute="bottom" secondItem="hQQ-tg-tHC" secondAttribute="bottom" id="leF-tW-wYd"/>
+                            <constraint firstItem="Nf2-OB-OJV" firstAttribute="top" secondItem="Zcr-aN-buV" secondAttribute="top" constant="10" id="xwI-sw-Fl1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Zcr-aN-buV"/>
                     </view>
@@ -47,6 +59,7 @@
                         <barButtonItem key="backBarButtonItem" title=" " id="ZlH-C8-FaG"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="notificationLabel" destination="Nf2-OB-OJV" id="Tv6-tg-XP7"/>
                         <outlet property="playButton" destination="RYC-ZV-V4B" id="aVf-g3-DSm"/>
                         <outlet property="tableView" destination="hQQ-tg-tHC" id="Mzn-00-Ay4"/>
                     </connections>
