--- a/Mp3App/Features/Mypage/LibraryDetail/LibraryDetailViewController.storyboard
+++ b/Mp3App/Features/Mypage/LibraryDetail/LibraryDetailViewController.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5cx-C8-tbF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5cx-C8-tbF">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,7 +21,7 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9e8-v1-idD">
-                                <rect key="frame" x="20" y="54" width="374" height="40"/>
+                                <rect key="frame" x="50" y="54" width="314" height="40"/>
                                 <color key="backgroundColor" red="0.52362823489999999" green="0.27759590740000001" blue="0.65983343120000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="YDZ-sR-GQZ"/>
@@ -44,13 +45,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="cEJ-gp-gc4" firstAttribute="top" secondItem="RoQ-UU-uIy" secondAttribute="top" constant="12" id="J7s-wF-hKe"/>
-                            <constraint firstItem="9e8-v1-idD" firstAttribute="leading" secondItem="RoQ-UU-uIy" secondAttribute="leading" constant="20" id="Kv6-Zj-YGo"/>
+                            <constraint firstItem="9e8-v1-idD" firstAttribute="leading" secondItem="RoQ-UU-uIy" secondAttribute="leading" constant="50" id="Kv6-Zj-YGo"/>
                             <constraint firstItem="RoQ-UU-uIy" firstAttribute="bottom" secondItem="bbn-1Y-Rxy" secondAttribute="bottom" id="Sgx-KZ-KUo"/>
                             <constraint firstItem="bbn-1Y-Rxy" firstAttribute="leading" secondItem="RoQ-UU-uIy" secondAttribute="leading" id="edc-Rb-myW"/>
                             <constraint firstAttribute="trailing" secondItem="bbn-1Y-Rxy" secondAttribute="trailing" id="fMG-SO-mcD"/>
                             <constraint firstItem="cEJ-gp-gc4" firstAttribute="centerX" secondItem="RoQ-UU-uIy" secondAttribute="centerX" id="gAc-nw-oYF"/>
                             <constraint firstItem="9e8-v1-idD" firstAttribute="top" secondItem="RoQ-UU-uIy" secondAttribute="top" constant="10" id="jz6-Q7-FWZ"/>
-                            <constraint firstItem="RoQ-UU-uIy" firstAttribute="trailing" secondItem="9e8-v1-idD" secondAttribute="trailing" constant="20" id="zQh-ol-ZwJ"/>
+                            <constraint firstItem="RoQ-UU-uIy" firstAttribute="trailing" secondItem="9e8-v1-idD" secondAttribute="trailing" constant="50" id="zQh-ol-ZwJ"/>
                             <constraint firstItem="bbn-1Y-Rxy" firstAttribute="top" secondItem="9e8-v1-idD" secondAttribute="bottom" constant="10" id="zuP-UM-0o4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RoQ-UU-uIy"/>
