--- a/Mp3App/Features/Play/PlayerView.xib
+++ b/Mp3App/Features/Play/PlayerView.xib
@@ -10,10 +10,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlayerView" customModule="Mp3App" customModuleProvider="target">
             <connections>
+                <outlet property="audioPlayerView" destination="Uoc-0b-qKm" id="YD6-3m-tdP"/>
                 <outlet property="containerView" destination="kcK-Vb-0Hk" id="Vnn-9L-iPz"/>
                 <outlet property="scrollView" destination="2Vg-Bk-hgh" id="2bN-ga-iHM"/>
-                <outlet property="topContentStrackView" destination="Y2G-xQ-y0k" id="kUf-uI-Y0H"/>
+                <outlet property="topContentStackView" destination="Y2G-xQ-y0k" id="kUf-uI-Y0H"/>
                 <outlet property="trackImageView" destination="MnK-tB-VkM" id="Uh4-1Z-g4n"/>
+                <outlet property="trackInformationView" destination="dGK-5b-ELh" id="B8w-PZ-5Bb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -115,9 +117,32 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ubO-10-CrB">
                     <rect key="frame" x="0.0" y="142" width="414" height="720"/>
                     <subviews>
-                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Vg-Bk-hgh">
+                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" pagingEnabled="YES" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Vg-Bk-hgh">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="720"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="5Wo-Fm-exG">
+                                    <rect key="frame" x="0.0" y="0.0" width="828" height="720"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dGK-5b-ELh" customClass="TrackInformationView" customModule="Mp3App" customModuleProvider="target">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="720"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uoc-0b-qKm" customClass="AudioPlayerView" customModule="Mp3App" customModuleProvider="target">
+                                            <rect key="frame" x="414" y="0.0" width="414" height="720"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </view>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="5Wo-Fm-exG" firstAttribute="top" secondItem="2Vg-Bk-hgh" secondAttribute="top" id="4FK-pH-XOB"/>
+                                <constraint firstAttribute="bottom" secondItem="5Wo-Fm-exG" secondAttribute="bottom" id="ANd-P0-6Fd"/>
+                                <constraint firstItem="5Wo-Fm-exG" firstAttribute="height" secondItem="2Vg-Bk-hgh" secondAttribute="height" multiplier="1:1" id="Fig-DJ-yTI"/>
+                                <constraint firstItem="5Wo-Fm-exG" firstAttribute="width" secondItem="2Vg-Bk-hgh" secondAttribute="width" multiplier="2:1" id="f3W-FK-f6b"/>
+                                <constraint firstItem="5Wo-Fm-exG" firstAttribute="leading" secondItem="2Vg-Bk-hgh" secondAttribute="leading" id="uMi-6q-bqF"/>
+                                <constraint firstAttribute="trailing" secondItem="5Wo-Fm-exG" secondAttribute="trailing" id="yQc-nU-2yd"/>
+                            </constraints>
                         </scrollView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
