--- a/Mp3App/Features/Play/PlayerView.xib
+++ b/Mp3App/Features/Play/PlayerView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,7 +15,9 @@
                 <outlet property="containerView" destination="kcK-Vb-0Hk" id="Vnn-9L-iPz"/>
                 <outlet property="controlPlayerView" destination="36b-4U-uzj" id="uZH-wd-5NA"/>
                 <outlet property="hideButton" destination="x3Q-Wb-Bo8" id="3lF-tS-vQL"/>
+                <outlet property="nextButton" destination="dB2-LE-BhN" id="vTN-c5-aov"/>
                 <outlet property="pageControl" destination="XCC-Q4-EGn" id="LML-lI-nPe"/>
+                <outlet property="playButton" destination="Jo9-AW-44m" id="aCt-we-8Ch"/>
                 <outlet property="scrollView" destination="2Vg-Bk-hgh" id="2bN-ga-iHM"/>
                 <outlet property="slider" destination="Mte-p1-JJ7" id="QHH-xj-y42"/>
                 <outlet property="topContentStackView" destination="Y2G-xQ-y0k" id="kUf-uI-Y0H"/>
