--- a/Mp3App/Features/Play/PlayerView.xib
+++ b/Mp3App/Features/Play/PlayerView.xib
@@ -17,6 +17,8 @@
                 <outlet property="descriptionLabel" destination="GwB-L4-iVT" id="td3-44-8c7"/>
                 <outlet property="descriptionMiniPlayerLabel" destination="hMa-VC-wge" id="rmK-px-Kbt"/>
                 <outlet property="hideButton" destination="x3Q-Wb-Bo8" id="3lF-tS-vQL"/>
+                <outlet property="miniNextButton" destination="RM2-tb-dzR" id="M0g-5A-B7w"/>
+                <outlet property="miniPlayButton" destination="6nm-5B-LCF" id="ABd-2I-bw7"/>
                 <outlet property="miniPlayerImageView" destination="MnK-tB-VkM" id="8nn-cy-th9"/>
                 <outlet property="miniPlayerSlider" destination="uhd-th-wQk" id="6SD-QK-v6E"/>
                 <outlet property="nextButton" destination="dB2-LE-BhN" id="vTN-c5-aov"/>
@@ -53,20 +55,8 @@
                                         <constraint firstAttribute="width" secondItem="MnK-tB-VkM" secondAttribute="height" id="N4V-fv-pwc"/>
                                     </constraints>
                                 </imageView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Playnext_Normal" translatesAutoresizingMaskIntoConstraints="NO" id="acp-kS-6ih">
-                                    <rect key="frame" x="382" y="15" width="22" height="22"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" secondItem="acp-kS-6ih" secondAttribute="height" id="hGA-nF-WYx"/>
-                                    </constraints>
-                                </imageView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icPlay_Normal_Black" translatesAutoresizingMaskIntoConstraints="NO" id="nN7-ey-kVM">
-                                    <rect key="frame" x="340" y="15" width="22" height="22"/>
-                                </imageView>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_heart_black_20_20_Normal" translatesAutoresizingMaskIntoConstraints="NO" id="eAx-5l-XYJ">
-                                    <rect key="frame" x="298" y="15" width="22" height="22"/>
-                                </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Hãy trao cho anh" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWt-4X-oQI">
-                                    <rect key="frame" x="70" y="10" width="218" height="16"/>
+                                    <rect key="frame" x="70" y="10" width="224" height="16"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="16" id="djU-WM-0nB"/>
                                     </constraints>
@@ -75,7 +65,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sơn Tùng MTP" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hMa-VC-wge">
-                                    <rect key="frame" x="70" y="29" width="218" height="15"/>
+                                    <rect key="frame" x="70" y="29" width="224" height="15"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -89,34 +79,54 @@
                                     <color key="maximumTrackTintColor" red="0.76016050580000005" green="0.76036769150000005" blue="0.75637501480000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="thumbTintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </slider>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ref-5P-IFX">
+                                    <rect key="frame" x="309" y="17" width="20" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="ref-5P-IFX" secondAttribute="height" id="9tE-3V-OgC"/>
+                                    </constraints>
+                                    <state key="normal" image="ic_heart_black_20_20_Normal"/>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6nm-5B-LCF">
+                                    <rect key="frame" x="344" y="17" width="20" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="6nm-5B-LCF" secondAttribute="height" id="AZs-LX-4qX"/>
+                                    </constraints>
+                                    <state key="normal" image="icPlay_Normal_Black"/>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RM2-tb-dzR">
+                                    <rect key="frame" x="379" y="17" width="20" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" secondItem="RM2-tb-dzR" secondAttribute="height" id="xmd-T2-coT"/>
+                                    </constraints>
+                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" image="Playnext_Normal"/>
+                                </button>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="MnK-tB-VkM" secondAttribute="bottom" constant="5" id="1fS-TF-CK1"/>
                                 <constraint firstItem="MnK-tB-VkM" firstAttribute="top" secondItem="9hc-Fo-LQF" secondAttribute="top" constant="7" id="2MO-sl-rI2"/>
-                                <constraint firstItem="acp-kS-6ih" firstAttribute="leading" secondItem="nN7-ey-kVM" secondAttribute="trailing" constant="20" id="3Ej-Or-G8c"/>
-                                <constraint firstAttribute="bottom" secondItem="acp-kS-6ih" secondAttribute="bottom" constant="15" id="8Wh-4J-m5y"/>
+                                <constraint firstAttribute="trailing" secondItem="RM2-tb-dzR" secondAttribute="trailing" constant="15" id="3Vh-0J-KgT"/>
+                                <constraint firstItem="ref-5P-IFX" firstAttribute="leading" secondItem="hMa-VC-wge" secondAttribute="trailing" constant="15" id="6eG-Hi-pr3"/>
+                                <constraint firstItem="ref-5P-IFX" firstAttribute="top" secondItem="uhd-th-wQk" secondAttribute="bottom" constant="15" id="9K3-UP-m7O"/>
                                 <constraint firstItem="uhd-th-wQk" firstAttribute="leading" secondItem="9hc-Fo-LQF" secondAttribute="leading" id="A0Q-0C-dwO"/>
-                                <constraint firstAttribute="bottom" secondItem="eAx-5l-XYJ" secondAttribute="bottom" constant="15" id="AZl-Uz-s31"/>
-                                <constraint firstItem="eAx-5l-XYJ" firstAttribute="width" secondItem="eAx-5l-XYJ" secondAttribute="height" id="B1b-Ls-QZR"/>
+                                <constraint firstItem="RM2-tb-dzR" firstAttribute="leading" secondItem="6nm-5B-LCF" secondAttribute="trailing" constant="15" id="BWd-hm-xJh"/>
                                 <constraint firstItem="MnK-tB-VkM" firstAttribute="leading" secondItem="9hc-Fo-LQF" secondAttribute="leading" constant="20" id="D8C-oL-GKN"/>
+                                <constraint firstItem="ref-5P-IFX" firstAttribute="leading" secondItem="cWt-4X-oQI" secondAttribute="trailing" constant="15" id="Dyh-Ju-ged"/>
+                                <constraint firstAttribute="bottom" secondItem="ref-5P-IFX" secondAttribute="bottom" constant="15" id="JhL-59-U3w"/>
                                 <constraint firstAttribute="bottom" secondItem="hMa-VC-wge" secondAttribute="bottom" constant="8" id="Jme-Vx-fC8"/>
-                                <constraint firstAttribute="bottom" secondItem="nN7-ey-kVM" secondAttribute="bottom" constant="15" id="MZy-a9-cxr"/>
                                 <constraint firstItem="hMa-VC-wge" firstAttribute="leading" secondItem="MnK-tB-VkM" secondAttribute="trailing" constant="10" id="Q1N-jH-YZN"/>
-                                <constraint firstItem="nN7-ey-kVM" firstAttribute="leading" secondItem="eAx-5l-XYJ" secondAttribute="trailing" constant="20" id="RvK-2s-gQs"/>
+                                <constraint firstItem="6nm-5B-LCF" firstAttribute="top" secondItem="uhd-th-wQk" secondAttribute="bottom" constant="15" id="Qm0-Pa-Y41"/>
                                 <constraint firstItem="uhd-th-wQk" firstAttribute="top" secondItem="9hc-Fo-LQF" secondAttribute="top" id="Vqr-dT-Fd1"/>
                                 <constraint firstItem="hMa-VC-wge" firstAttribute="top" secondItem="cWt-4X-oQI" secondAttribute="bottom" constant="3" id="Wgj-YP-stD"/>
                                 <constraint firstItem="cWt-4X-oQI" firstAttribute="top" secondItem="9hc-Fo-LQF" secondAttribute="top" constant="10" id="XgR-wE-npM"/>
+                                <constraint firstItem="6nm-5B-LCF" firstAttribute="leading" secondItem="ref-5P-IFX" secondAttribute="trailing" constant="15" id="Yva-6R-5aY"/>
                                 <constraint firstAttribute="trailing" secondItem="uhd-th-wQk" secondAttribute="trailing" id="Yzb-Db-hb6"/>
-                                <constraint firstItem="eAx-5l-XYJ" firstAttribute="leading" secondItem="cWt-4X-oQI" secondAttribute="trailing" constant="10" id="ZWl-vc-zRg"/>
-                                <constraint firstItem="eAx-5l-XYJ" firstAttribute="top" secondItem="9hc-Fo-LQF" secondAttribute="top" constant="15" id="bki-AH-JZA"/>
-                                <constraint firstItem="nN7-ey-kVM" firstAttribute="width" secondItem="nN7-ey-kVM" secondAttribute="height" id="gNk-CL-17R"/>
+                                <constraint firstAttribute="bottom" secondItem="RM2-tb-dzR" secondAttribute="bottom" constant="15" id="c5k-pY-7cP"/>
+                                <constraint firstItem="RM2-tb-dzR" firstAttribute="top" secondItem="uhd-th-wQk" secondAttribute="bottom" constant="15" id="eYH-XU-OtX"/>
                                 <constraint firstAttribute="height" constant="52" id="ggk-9J-ZcX"/>
                                 <constraint firstItem="cWt-4X-oQI" firstAttribute="leading" secondItem="MnK-tB-VkM" secondAttribute="trailing" constant="10" id="o4s-xY-xnV"/>
-                                <constraint firstAttribute="trailing" secondItem="acp-kS-6ih" secondAttribute="trailing" constant="10" id="rn6-oV-hGa"/>
-                                <constraint firstItem="eAx-5l-XYJ" firstAttribute="leading" secondItem="hMa-VC-wge" secondAttribute="trailing" constant="10" id="w3v-SL-weS"/>
-                                <constraint firstItem="acp-kS-6ih" firstAttribute="top" secondItem="9hc-Fo-LQF" secondAttribute="top" constant="15" id="wuQ-Ec-A5N"/>
-                                <constraint firstItem="nN7-ey-kVM" firstAttribute="top" secondItem="9hc-Fo-LQF" secondAttribute="top" constant="15" id="xtB-nJ-lgp"/>
+                                <constraint firstAttribute="bottom" secondItem="6nm-5B-LCF" secondAttribute="bottom" constant="15" id="tiE-Bf-mtr"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9wL-3P-IxB">
@@ -372,6 +382,10 @@
                             <color key="minimumTrackTintColor" red="0.53866553309999998" green="0.27624678609999997" blue="0.6784849167" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <color key="maximumTrackTintColor" red="0.81341868640000003" green="0.81729781629999998" blue="0.80958580970000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <color key="thumbTintColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="touchDownSlider:" destination="-1" eventType="touchDown" id="zK0-UQ-xNt"/>
+                                <action selector="touchUpSlider:" destination="-1" eventType="touchUpInside" id="gEX-oL-aEG"/>
+                            </connections>
                         </slider>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
